--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en-ca">
-<head>
-  <meta charset="utf-8">
-  <title>Cecilia Bleszynski's Portfolio</title>
-</head>
-<body>
+---
+layout: default
+---
 
   <h1>My Portfolio</h1>
 
