Added more jekyll!

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-  <h1>My Portfolio</h1>
+  {% include logo-head.html %}
 
-</body>
-</html>
+  {% include modal.html url="/modal/" title="art1" %}
