--- a/_posts/2015-12-19-personal-motion.html
+++ b/_posts/2015-12-19-personal-motion.html
@@ -8,11 +8,16 @@ category: news
 
 {% include nav.html %}
 
-<img class="img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
+  <div class="relative">
+      <img class="w-1" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
 
-<h1 class="padding-b zindex-3 push-0 align-center">2015 Motion Brand</h1>
 
-<p>A promotional video for my old brand from 2015. The video was fun to make, using a mix of stop motion and After Effects animation.</p>
+    <div class="absolute max-length text-center zindex-1 pin-bc w-1 pad-b">
+    <h1>2015 Motion Brand</h1>
+    </div>
+  </div>
+
+<p class="gutter">A promotional video for my old brand from 2015. The video was fun to make, using a mix of stop motion and After Effects animation.</p>
 
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
