--- a/_posts/2015-12-19-personal-motion.html
+++ b/_posts/2015-12-19-personal-motion.html
@@ -4,21 +4,22 @@ title: 2015 Motion Branding Piece
 meta: A personal exploration of my 2016 brand identity using different animation techniques
 source: https://bles0009.myportfolio.com/
 category: news
+preview: card-cylka.jpg
 ---
 
 {% include nav.html %}
 
-  <div class="relative">
-      <img class="w-1" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-
+<div class="wrapper center-content-horizontal">
+  <div class="relative max-width">
+    <iframe src="https://player.vimeo.com/video/195341727" width="100%" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <div class="absolute max-length text-center zindex-1 pin-bc w-1 pad-b">
-    <h1>2015 Motion Brand</h1>
+    <h2>2015 Motion Brand</h2>
     </div>
   </div>
 
-<p class="gutter">A promotional video for my old brand from 2015. The video was fun to make, using a mix of stop motion and After Effects animation.</p>
 
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
+  <p class="gutter-1-2">This animation was built to embody one of the many inspirations I had when designing my logo for 2018.</p>
+  <p class="gutter-1-2">One of my  most prominent inspirations was the tubular, stroke-like nature of neon signs. I wanted my logo to be light and fun to reflect the style and nature my designs often take.
+    Neon lights can stand for different things depending on location and shape. Here in the west, neon signs shine bright and proud throughout the night. But in the city of Warsaw Poland, Neon signs were encouraged by communist rulers in the 1940’s  and after politically reforming, the people grew to see the signs as relics for a painful age: Where politicians tried to cover up the struggles of the people with bright street signs. It was this dynamic, and the beauty of many of these signs still around today, that made me enamoured in their aesthetic. Regardless of the images shown, both here and in Warsaw people used neon lights as a way to communicate in the dark in a variety of styles.  I want to be the able to light up the ideas of others and make it so they can be heard and understood.</p>
+</div>
