--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-  {% include logo-head.html %}
+  {% include nav.html %}
 
   {% include modal.html url="/modal/" title="art1" %}
