--- a/_posts/2016-07-06-digital-painting-and-illustration.html
+++ b/_posts/2016-07-06-digital-painting-and-illustration.html
@@ -4,21 +4,22 @@ title: Digital Illustrations
 meta: Various illustrations from years 2015-2017
 source: https://bles0009.myportfolio.com/
 category: news
+preview: card-starling.jpg
 ---
 
 {% include nav.html %}
 
-  <div class="relative">
-      <img class="w-1" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-
-
+  <div class="img-fade">
+      <img class="w-1" src="{{site.baseurl}}/images/illustration/illustration-portrait.jpg" alt="portrait">
     <div class="absolute max-length text-center zindex-1 pin-bc w-1 pad-b">
-    <h1>2015 Motion Brand</h1>
+    <h1>Illustrations</h1>
     </div>
   </div>
 
-<p class="gutter">This is a self portrait of myslef, painted in photoshop using default brush presets. I wanted to challenge myslef by capturing both dynamic shanding as well as intricate detail. My aim was not to create a caraceture, nor an ideal verson of myself. Rather I wanted capture a moment with myslef, that despite my flawed skin I still try to smile every day and embrace my flaws.</p>
+<p class="gutter pad-t">This is a self portrait of myslef, painted in photoshop using default brush presets. I wanted to challenge myslef by capturing both dynamic shanding as well as intricate detail. My aim was not to create a caraceture, nor an ideal verson of myself. Rather I wanted capture a moment with myslef, that despite my flawed skin and frustraiting paleness; I still smile and embrace the moment.</p>
 
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
+<iframe style="border: 1px solid #777;" src="https://indd.adobe.com/embed/dd04056a-aba1-444c-8a6e-c53dddbb95b4?startpage=1&allowFullscreen=true" width="100%" height="460px" frameborder="0" allowfullscreen=""></iframe>
+
+<img class="pad-t img-flex" src="{{site.baseurl}}/images/illustration/illustration-warsaw.png" alt="">
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
