--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,6 @@ layout: default
 
   <div class="grid">
     {% for post in site.posts %}
-      {% include card.html cardclass='' url=post.url title=post.title %}
+      {% include card.html cardclass='' data=post %}
     {% endfor %}
   </div>
