Made some fixes to 404 and pages

--- a/_posts/2015-12-19-personal-motion.html
+++ b/_posts/2015-12-19-personal-motion.html
@@ -3,7 +3,9 @@ layout: default
 title: 2015 Motion Branding Piece
 meta: A personal exploration of my 2016 brand identity using different animation techniques
 source: https://bles0009.myportfolio.com/
-category: news
+categories:
+- motion
+
 preview: card-cylka.jpg
 ---
 
@@ -17,7 +19,6 @@ preview: card-cylka.jpg
     <h2>2015 Motion Brand</h2>
     </div>
   </div>
-
 
   <p class="gutter-1-2">This animation was built to embody one of the many inspirations I had when designing my logo for 2018.</p>
   <p class="gutter-1-2">One of my  most prominent inspirations was the tubular, stroke-like nature of neon signs. I wanted my logo to be light and fun to reflect the style and nature my designs often take.
