--- a/_posts/2017-04-20-twitch-channel-visuals.html
+++ b/_posts/2017-04-20-twitch-channel-visuals.html
@@ -3,14 +3,17 @@ layout: default
 title: Twitch Banner and Visuals
 meta: Twitch Channel Illustration and visuals for banner and cards
 source: https://bles0009.myportfolio.com/
-category: news
+categories:
+- illustration
+- design
+
 preview: card-beautifulmachine.jpg
 ---
 
 {% include nav.html %}
 
 <div class="img-fade">
-  <img class="img-flex w-1" src="{{site.baseurl}}/images/beautiful_machine/banner.png" alt="">
+  <img class="img-flex w-1" src="{{site.baseurl}}/images/beautiful_machine/banner.png" alt="Banner image of a guy in a contruction mech">
 </div>
 
 <h2>Beautiful Machine Visuals</h2>
@@ -21,19 +24,19 @@ preview: card-beautifulmachine.jpg
 <p>I am personally very happy with the final result: a profile true to the interests and personality of the streamer.</p>
 <ul class="grid list-group--inline">
   <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/GAMES.png" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/GAMES.png" alt="Games Icon">
   </li>
   <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HEARTS.png" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HEARTS.png" alt="Hearts Icon">
   </li>
   <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HUMBLE.png" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HUMBLE.png" alt="Humble Bundle Icon">
   </li>
   <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/SOCIAL.png" alt="">
+    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/SOCIAL.png" alt="Social Icon">
   </li>
 </ul>
 
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample1.png" alt="">
+<img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample1.png" alt="Sample icon and font combinations for client">
 
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample2.png" alt="">
+<img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample2.png" alt="Sample icon and font combinations for client">
