--- a/_posts/2017-06-10-portrait.html
+++ b/_posts/2017-06-10-portrait.html
@@ -1,24 +1,24 @@
 ---
 layout: default
-title: 2015 Motion Branding Piece
-meta: A personal exploration of my 2016 brand identity using different animation techniques
+title: Cecilia Bleszynski Portrait
+meta: Digital portrait I painted over the summer
 source: https://bles0009.myportfolio.com/
-category: news
+categories:
+- illustration
+
 preview: card-portrait.jpg
 ---
 
 {% include nav.html %}
 
-<div class="relative logo-bump">
-    <img class="w-1" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-
+<div class="img-fade">
+    <img class="w-1" src="{{site.baseurl}}/images/illustration/illustration-portrait.jpg" alt="portrait">
   <div class="absolute max-length text-center zindex-1 pin-bc w-1 pad-b">
-  <h2>2015 Motion Brand</h2>
+    <h1>Illustrations</h1>
   </div>
 </div>
 
-<p class="gutter">A promotional video for my old brand from 2015. The video was fun to make, using a mix of stop motion and After Effects animation.</p>
-
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
-<img class="pad-t img-flex" src="{{site.baseurl}}/images/SquarePrev.jpg" alt="">
+<div class="gutter">
+  <p>I would love to be able to give some sort of an in-depth analysis of this piece, but like with many self portraits this really is just an exploration of my physical appearance and has no deep conceptual motive behind it. I chose dramatic lighting and an expression that would accentuate certain creases in my face. I guess I could argue that I simply aimed to capture my average looking face with its flaws. I didn’t aim to make a pretty portrait, so I left my mild acne in and made no attempt to make my nose look appealingly smaller. I am satisfied with it, knowing that I am showing an honest portrayal of myself. The addition of pine branches along the bottom is a nod to my roots in rural Canada.</p>
+  <p>Overall, this was a fun exploration and helped me home my digital painting skills in Photoshop.</p>
+</div>
