--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -3,7 +3,11 @@ layout: default
 title: Daily Dino News
 meta: A kids news series featuring Dino's exclusivley!
 source: https://bles0009.myportfolio.com/
-category: news
+categories:
+- illustration
+- design
+- motion
+
 preview: card-DDN.jpg
 ---
 
