--- a/moti.html
+++ b/moti.html
@@ -5,7 +5,7 @@ layout: default
   {% include nav.html %}
 
   <div class="grid">
-    {% for post in site.categories.design %}
+    {% for post in site.categories.motion %}
       {% include card.html cardclass='' data=post %}
     {% endfor %}
   </div>
