Fixed multiple errors

--- a/_posts/2016-07-06-digital-painting-and-illustration.html
+++ b/_posts/2016-07-06-digital-painting-and-illustration.html
@@ -12,13 +12,20 @@ preview: card-starling.jpg
 {% include nav.html %}
 
   <div class="img-fade">
-    <img class="w-1 relative" src="{{site.baseurl}}/images/illustration/illustration-portrait.jpg" alt="portrait">
+    <img class="w-1 relative" src="{{site.baseurl}}/images/illustration/Elliott.jpg" alt="portrait">
+  </div>
+  <div class="img-fade">
+    <img class="w-1 relative" src="{{site.baseurl}}/images/illustration/Alex.jpg" alt="portrait">
   </div>
   <div class="max-length text-center w-1">
-  <h1>Illustrations</h1>
+  <h2>Starling Concept Stills</h2>
   </div>
-
-<p class="gutter pad-t">This is a self portrait of myslef, painted in photoshop using default brush presets. I wanted to challenge myslef by capturing both dynamic shanding as well as intricate detail. My aim was not to create a caraceture, nor an ideal verson of myself. Rather I wanted capture a moment with myslef, that despite my flawed skin and frustraiting paleness; I still smile and embrace the moment.</p>
+<div class="gutter pad-t">
+  <p>This is a conceptual study of a scene from an online short story. The aim was to create two still frames expressing the different perspective of each character. I was successful in taking a written concept and creating visuals that not only depicted the scene, but the underlying themes of mutual discomfort and alienation. There is harmony between the two characters, portrayed by the vivid coloured lighting that washes out their skin tones- yet the posture and distinct camera angles maintain tension between the two.
+  The image was received positively amongst the community and I hope to maybe continue illustrating scenes as the story progresses in my spare time.
+  </p>
+  <p>Origonal story and characters by Ursula Wood</p>
+</div>
 
 <!---
 <iframe style="border: 1px solid #777;" src="https://indd.adobe.com/embed/dd04056a-aba1-444c-8a6e-c53dddbb95b4?startpage=1&allowFullscreen=true" width="100%" height="460px" frameborder="0" allowfullscreen=""></iframe>
