--- a/_posts/2017-06-10-portrait.html
+++ b/_posts/2017-06-10-portrait.html
@@ -12,11 +12,12 @@ preview: card-portrait.jpg
 {% include nav.html %}
 
 <div class="img-fade">
-    <img class="w-1" src="{{site.baseurl}}/images/illustration/illustration-portrait.jpg" alt="portrait">
-  <div class="absolute max-length text-center zindex-1 pin-bc w-1 pad-b">
-    <h1>Illustrations</h1>
-  </div>
+  <img class="w-1 relative" src="{{site.baseurl}}/images/illustration/illustration-portrait.jpg" alt="portrait">
 </div>
+<div class="max-length text-center w-1">
+<h2>Illustrations</h2>
+</div>
+
 
 <div class="gutter">
   <p>I would love to be able to give some sort of an in-depth analysis of this piece, but like with many self portraits this really is just an exploration of my physical appearance and has no deep conceptual motive behind it. I chose dramatic lighting and an expression that would accentuate certain creases in my face. I guess I could argue that I simply aimed to capture my average looking face with its flaws. I didn’t aim to make a pretty portrait, so I left my mild acne in and made no attempt to make my nose look appealingly smaller. I am satisfied with it, knowing that I am showing an honest portrayal of myself. The addition of pine branches along the bottom is a nod to my roots in rural Canada.</p>
