--- a/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
+++ b/_posts/2017-06-24-Ottawa-International-Animation-Festival-2017.html
@@ -25,12 +25,15 @@ preview: card-OIAF.jpg
 <br>This gave the festival guide a fitting visual introduction to the content of the event.</p>
 <p>I worked with SHAW and the OIAF to create an identity for the Ingenius youth program hosted at the NAC.
 <br>The logo was designed to evoke the educational nature of the event, by having the logo contain the image of a brain. Drawn in a manner similar to that of a childlike illustration, the smiling face and nods to cartoon animation gave the logo a fun and approachable feel without sacrificing legibility.</p>
-<div class="">
+<div class="pad-b">
   <img class="img-flex w-1" src="{{site.baseurl}}/images/OIAF/poster.jpg" alt="sample poster image">
 </div>
-<h4 class="pad-t">Directional Signage - Print</h4>
-<p>I created a variety of signage templates to aid festival goers in navigating various festival venues. I incorporated the theme of limbs to create a literal hand point theme to all the signs.</p>
-<h4 class="pad-t-2 pad-b">Problems and Solutions</h4>
+<h4 class="pad-t-2">Directional Signage - Print</h4>
+<p>I created a variety of signage templates to aid festival goers in navigating various festival venues. I incorporated the theme of limbs to create a literal hand point theme to all the signs.
+<div>
+  <img class="img-flex w-1" src="{{site.baseurl}}/images/OIAF/no_entrance.png" alt="sample directional sign">
+</div>
+<h4 class="pad-t-2 pad-b-1-4">Problems and Solutions</h4>
 <h5>Problem</h5>
 <p>The festival needed a fresh campaign for their posters and promotional materials for 2017. Previous campaigns were built on fun and playful Illustrated posters- but didn’t reflect the festival itself very strongly and potentially alienated locals. The festival needed a way to showcase individual screenings to a wider audience of people- while still identifying as part of the greater festival.</p>
 <h5>Solution</h5>
