--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -13,21 +13,90 @@ preview: card-DDN.jpg
 
 {% include nav.html %}
 
-
-  <div class="video-container">
-    <iframe class="" src="https://www.youtube.com/embed/VzpPLzjYpw8" width="100%" height="700px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/VzpPLzjYpw8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  <div class="img-fade">
+    <img class="w-1 relative" src="{{site.baseurl}}/images/carosel/DDN_preview.png" alt="portrait">
+  </div>
+  <div class="max-length text-center w-1">
+  <h2>Daily Dino News</h2>
   </div>
 
   <div class="pad-t-2 gutter">
     <p>This was a group client project aimed to create a pitch video for the children's TV show concept: Daily Dino News.
     Daily Dino News (DDN) is a children’s news program featuring the latest and greatest in Dinosaur facts.
     Me and 4 of my classmates were tasked with creating a conceptual identity for the show, and a promotional video to convey its potential in order to be pitched to networks.</p>
+
+
+
+
     <h5>The Brand</h5>
-    <p>Our group came together with 50 conceptual sketches initially, and narrowed them down. In order to clean up the concepts for the clent, we exchanged concepts with each other to refine and came up with 4 concepts and brands to share with the client. After sharing with the client a final design was chosen and pulled forward.
+    <p class="pad-b">Our group came together with 50 conceptual sketches initially, and narrowed them down. In order to clean up the concepts for the clent, we exchanged concepts with each other to refine and came up with 4 concepts and brands to share with the client. After sharing with the client a final design was chosen and pulled forward.
     The logo speaks true to the shows subject and contains imagery that the show’s target audience of 6-11 will instantly resonate with. What cam with it was a brand identity, themed around the colours and textures themed around the jurassic landscape</p>
     <h5>The Motion</h5>
-    <p>DDN’s pitch video was designed to illustrate the shows concept and showcase it’s potencial.
+
+    <div class="video-container">
+      <iframe class="" src="https://www.youtube.com/embed/VzpPLzjYpw8" width="100%" height="700px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/VzpPLzjYpw8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+    <ul class="grid list-group-inline text-center">
+      <li class="unit [ xs-1 s-1-2 m-1-2 l-1-2 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/still_planet.png" alt="Planet still ftom end of brand video">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-2 m-1-2 l-1-2 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/still_map.png" alt="still map image">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-2 m-1-2 l-1-2 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/still_tower.png" alt="Still frame of dinosaurs crushing a tower">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-2 m-1-2 l-1-2 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/still_app.png" alt="Still of DDN app">
+        </div>
+      </li>
+    </ul>
+
+    <p class="pad-t">DDN’s pitch video was designed to illustrate the pitc and showcase it’s potencial.
     With the demographic in mind, we decided on the theme of paper cut-outs for our video. Using finger-puppet style animation and colourful shapes created a fun and informative video that speaks to children the show is targeted too.
     </p>
+
+    <ul class="grid list-group-inline text-center">
+      <li class="unit [ xs-1 s-1-4 m-1-4 l-1-6 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/T-rex.png" alt="T-rex">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-4 m-1-4 l-1-6 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/Gallimimus.png" alt="Gallimimus">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-4 m-1-4 l-1-6 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/Pterodactyl.png" alt="Pterodactyl">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-4 m-1-4 l-1-6 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/Brachinosaurus.png" alt="Brachinosaurus">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-2 m-1-2 l-1-6 ]">
+        <div class="island-1-4 spacer">
+          <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/Triceratops.png" alt="Triceratops">
+        </div>
+      </li>
+      <li class="unit [ xs-1 s-1-2 m-1-2 l-1-6 ]">
+        <div class="island-1-4 spacer">
+        <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/Hadrosaur.png" alt="Hadrosaur">
+      </li>
+    </ul>
+  </div>
+
+  <div class="img-fade">
+    <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/texture.png" alt="portrait">
   </div>
