Added javascript to increase site speed

--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -23,10 +23,8 @@ preview: card-DDN.jpg
   <div class="pad-t-2 gutter">
     <p>This was a group client project aimed to create a pitch video for the children's TV show concept: Daily Dino News.
     Daily Dino News (DDN) is a children’s news program featuring the latest and greatest in Dinosaur facts.
-    Me and 4 of my classmates were tasked with creating a conceptual identity for the show, and a promotional video to convey its potential in order to be pitched to networks.</p>
-
-
-
+    Me and 4 of my classmates were tasked with creating a conceptual identity for the show, and a promotional video to convey its potential in order to be pitched to networks.<br>
+    As project lead I was responsible for overseeing software and deliverables.</p>
 
     <h5>The Brand</h5>
     <p class="pad-b">Our group came together with 50 conceptual sketches initially, and narrowed them down. In order to clean up the concepts for the clent, we exchanged concepts with each other to refine and came up with 4 concepts and brands to share with the client. After sharing with the client a final design was chosen and pulled forward.
@@ -100,3 +98,13 @@ preview: card-DDN.jpg
   <div class="img-fade">
     <img class="w-1 relative" src="{{site.baseurl}}/images/DDN/texture.png" alt="portrait">
   </div>
+
+  <h3 class="text-center">Credit to our fantastic project team</h3>
+  <ul class="list-group">
+    <li>Lauren Berg</li>
+    <li>Katrin Emery</li>
+    <li>MJ Holland</li>
+    <li>Kait Moore</li>
+    <h4 class="pad-t"> Origonal Concept</h4>
+    <li>Gerald Tripp</l1>
+  </ul>
