--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -105,6 +105,6 @@ preview: card-DDN.jpg
     <li>Katrin Emery</li>
     <li>MJ Holland</li>
     <li>Kait Moore</li>
-    <h4 class="pad-t"> Origonal Concept</h4>
+    <h4 class="pad-t-2"> Origonal Concept</h4>
     <li>Gerald Tripp</l1>
   </ul>
