fixed errors in the links

--- a/_posts/2017-03-10-Love-Buds.html
+++ b/_posts/2017-03-10-Love-Buds.html
@@ -58,8 +58,10 @@ preview: card-lovebuds.jpg
       </div>
     </div>
 
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    <div class="hover fade">
+      <a class="prev" onclick="plusSlides(-1)"><svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="20.1" height="46.1" viewBox="0 0 25.1 51.5"><path d="M20.1,5S5,9.5,5,25.4,20.1,46.5,20.1,46.5" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/></svg></a>
+      <a class="next" onclick="plusSlides(1)"><svg id="copyright" xmlns="http://www.w3.org/2000/svg" width="20.1" height="46.1" viewBox="0 0 25.1 51.5"><path d="M5,5S20.1,9.5,20.1,25.4,5,46.5,5,46.5" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="10"/></svg></a>
+    </div>
   </div>
 
   <div class="island" style="text-align:center">
