added SEO stuff!

--- a/_posts/2015-12-19-personal-motion.html
+++ b/_posts/2015-12-19-personal-motion.html
@@ -1,7 +1,8 @@
 ---
 layout: default
-title: 2015 Motion Branding Piece
-meta: A personal exploration of my 2016 brand identity using different animation techniques
+title: 2017 Motion Branding Piece - Neon Light Animation
+meta: A personal exploration of my 2016 brand identity using different animation techniques. Neon lights, Fluid Motion, and spark textures, Ottawa Ontario.
+description: A personal exploration of my 2016 brand identity using different animation techniques. Neon lights, Fluid Motion, and spark textures, Ottawa Ontario.
 source: https://bles0009.myportfolio.com/
 categories:
 - motion
@@ -16,7 +17,7 @@ preview: card-cylka.jpg
     <iframe src="https://player.vimeo.com/video/195341727" width="100%" height="1000" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
     <div class="absolute max-length text-center zindex-1 pin-bc w-1 pad-b">
-    <h2>2015 Motion Brand</h2>
+    <h2>2017 Neon Motion Brand</h2>
     </div>
   </div>
 
