--- a/_posts/2016-07-06-digital-painting-and-illustration.html
+++ b/_posts/2016-07-06-digital-painting-and-illustration.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Digital Illustrations
-meta: Various illustrations from years 2015-2017
+title: Concept art a short story about aliens and interspecies racism in the far future.
+meta: Sci-fi short story conceptual illustration featuiring alien bird people and awkward space politics
 source: https://bles0009.myportfolio.com/
 categories:
 - illustration
