--- a/_posts/2017-06-10-portrait.html
+++ b/_posts/2017-06-10-portrait.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Cecilia Bleszynski Portrait
-meta: Digital portrait I painted over the summer
+meta: Digital portrait I painted over the summer of 2017 in Ottawa Ontario.
+description: A portrait aimed to capture intense lighting and natural flaws in my appearance to achieve realism.
 source: https://bles0009.myportfolio.com/
 categories:
 - illustration
@@ -15,7 +16,7 @@ preview: card-portrait.jpg
   <img class="w-1 relative" src="{{site.baseurl}}/images/illustration/illustration-portrait.jpg" alt="portrait">
 </div>
 <div class="max-length text-center w-1">
-<h2>Illustrations</h2>
+<h2>Self Portrait - 2017</h2>
 </div>
 
 
