--- a/_posts/2017-04-20-twitch-channel-visuals.html
+++ b/_posts/2017-04-20-twitch-channel-visuals.html
@@ -15,28 +15,28 @@ preview: card-beautifulmachine.jpg
 <div class="img-fade">
   <img class="img-flex w-1" src="{{site.baseurl}}/images/beautiful_machine/banner.png" alt="Banner image of a guy in a contruction mech">
 </div>
+<div class="gutter">
+  <h2>Beautiful Machine Visuals</h2>
 
-<h2>Beautiful Machine Visuals</h2>
-
-<p>This illustration commission was for a cyberpunk themed banner and buttons for a twitch homepage.
-  The conceptual development for the banner and icons was a lot of fun and in the end resulted in the creation of 5 unique icons, custom circuit board textures, a vivid colour scheme, and a scalable banner image to create an online visual identity.</p>
-<p>By staying true to the theme of cyberpunk, the visuals are consistent with each other and work together to create a professional profile for the user. The banner image combines the users interest in machinery with his love of vivid colours and futuristic technology.</p>
-<p>I am personally very happy with the final result: a profile true to the interests and personality of the streamer.</p>
-<ul class="grid list-group--inline">
-  <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/GAMES.png" alt="Games Icon">
-  </li>
-  <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HEARTS.png" alt="Hearts Icon">
-  </li>
-  <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HUMBLE.png" alt="Humble Bundle Icon">
-  </li>
-  <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-    <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/SOCIAL.png" alt="Social Icon">
-  </li>
-</ul>
-
+  <p>This illustration commission was for a cyberpunk themed banner and buttons for a twitch homepage.
+    The conceptual development for the banner and icons was a lot of fun and in the end resulted in the creation of 5 unique icons, custom circuit board textures, a vivid colour scheme, and a scalable banner image to create an online visual identity.</p>
+  <p>By staying true to the theme of cyberpunk, the visuals are consistent with each other and work together to create a professional profile for the user. The banner image combines the users interest in machinery with his love of vivid colours and futuristic technology.</p>
+  <p>I am personally very happy with the final result: a profile true to the interests and personality of the streamer.</p>
+  <ul class="grid list-group--inline">
+    <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
+      <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/GAMES.png" alt="Games Icon">
+    </li>
+    <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
+      <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HEARTS.png" alt="Hearts Icon">
+    </li>
+    <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
+      <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/HUMBLE.png" alt="Humble Bundle Icon">
+    </li>
+    <li class="island-1-4 unit [ xs-1 s-1 m-1-2 l-1-2 ]">
+      <img class="img-flex" src="{{site.baseurl}}/images/beautiful_machine/SOCIAL.png" alt="Social Icon">
+    </li>
+  </ul>
+</div>
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample1.png" alt="Sample icon and font combinations for client">
 
 <img class="pad-t img-flex" src="{{site.baseurl}}/images/beautiful_machine/sample2.png" alt="Sample icon and font combinations for client">
