Added important Seo content

--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -108,3 +108,20 @@ preview: card-DDN.jpg
     <h4 class="pad-t-2"> Origonal Concept</h4>
     <li>Gerald Tripp</l1>
   </ul>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https//schema.org",
+    "@type": "CreativeWork",
+    "name": "Brading and Vidoe for Dino Daily News",
+    "author" {
+      "@type": "Person",
+      "name": "Cecilia Bleszynski"
+    },
+    "image": "http://cylka.ca/images/carosel/DDN_preview.png",
+    "url": "http://cylka.ca/illustration/design/motion/2018/01/10/daily_dino_news/",
+    "dateCreated": "2018-01-10",
+    "description": "A Brand and promotional video to pitch the Childeren's new series 'Daily Dino News'!"
+    "keywords": "dinosaurs, graphic, design, video, childeren, show, logo, motion"
+  }
+  </script>
