--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -114,7 +114,7 @@ preview: card-DDN.jpg
     "@context": "https//schema.org",
     "@type": "CreativeWork",
     "name": "Brading and Vidoe for Dino Daily News",
-    "author" {
+    "author": {
       "@type": "Person",
       "name": "Cecilia Bleszynski"
     },
