--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -121,7 +121,7 @@ preview: card-DDN.jpg
     "image": "http://cylka.ca/images/carosel/DDN_preview.png",
     "url": "http://cylka.ca/illustration/design/motion/2018/01/10/daily_dino_news/",
     "dateCreated": "2018-01-10",
-    "description": "A Brand and promotional video to pitch the Childeren's new series 'Daily Dino News'!"
+    "description": "A Brand and promotional video to pitch the Childeren's new series 'Daily Dino News'!",
     "keywords": "dinosaurs, graphic, design, video, childeren, show, logo, motion"
   }
   </script>
