--- a/_posts/2018-01-10-daily_dino_news.html
+++ b/_posts/2018-01-10-daily_dino_news.html
@@ -111,7 +111,7 @@ preview: card-DDN.jpg
 
   <script type="application/ld+json">
   {
-    "@context": "https//schema.org",
+    "@context": "https://schema.org",
     "@type": "CreativeWork",
     "name": "Brading and Vidoe for Dino Daily News",
     "author": {
